<resources>
    <string name="app_name">JAcK</string>
    <string name="sample_text_1">Jessica Rabbit</string>
    <string name="sample_text_2">Lady Gaga</string>
    <string name="sample_text_3">Dua Lipa</string>
    <string name="sample_text_4">Riley Reid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="field_e_mail">E-mail</string>
    <string name="field_password">Password</string>
    <string name="button_log_in">Log In</string>
    <string name="field_name">Name</string>
    <string name="field_age">AGE</string>
    <string name="field_gender">GENDER</string>
    <string name="field_occupation">OCCUPATION</string>
    <string name="field_location">LOCATION</string>
    <string name="field_bio">BIO</string>
    <string name="name">Name</string>
    <string name="gender" />
    <string name="occupation" />
    <string name="location" />
    <string name="bio" />
    <string name="my_faves_button">My Faves</string>
    <string name="edit_button">Edit</string>
    <string name="log_out_button">Log Out</string>
    <string name="save_button">SAVE</string>
    <string name="ladygaga">Lady Gaga, born Stefani Joanne Angelina Germanotta, is an American songwriter, singer, actress, philanthropist, dancer and fashion designer.Gaga was born on March 28, 1986 in Manhattan, New York City, to Cynthia Louise (Bissett) and Joseph Anthony Germanotta, Jr., an internet entrepreneur. Her father is of Italian descent, and her mother is of half Italian and half French-Canadian, English, German, and Scottish ancestry. Gaga was able to sing and play the piano from a young age. She attended the Convent of the Sacred Heart from age 11 where was bullied for her appearance (she was small and plumper than other girls with large front teeth) and eccentric habits.</string>
    <string name="rileyreid">Riley Reid (born July 9, 1991) is an American actress. She was born in Miami Beach, Florida, and attended Florida International University. She briefly worked as an exotic dancer, and entered the film industry in 2010 at the age of 19. Since then, she has won numerous awards, including Female Performer of the Year from AVN in 2015.</string>
    <string name="dialupa">Dua Lipa is an English singer, songwriter, and model. Her musical career began at age 14, when she began covering songs by other artists on YouTube. In 2015, she was signed with Warner Music Group and released her first single soon after. In December 2016, a documentary about Lipa was commissioned by The Fader magazine, titled See in Blue. In January 2017, Lipa won the EBBA Public Choice Award. Her self-titled debut studio album was released on 2 June 2017. The album spawned seven singles, including two UK top-10 singles "Be the One" and "Idgaf" and the UK number-one single "New Rules", which also reached number six in the US. In 2018, Lipa won two Brit Awards for British Female Solo Artist and British Breakthrough Act.</string>
    <string name="jessicarabbit">Jessica Rabbit is a fictional character in Who Censored Roger Rabbit? and its loose film adaptation, Who Framed Roger Rabbit. She is depicted as Roger\'s human toon wife in various Roger Rabbit media. Jessica is renowned as one of the most well-known sex symbols in animation.[3] She is also well known for the quote: "I'm not bad. I'm just drawn that way."</string>
</resources>
