<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"

>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="48dp">

        <TextView
            android:id="@+id/textNum1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="clip_vertical|center_horizontal"
            android:paddingTop="16dp"
            android:text="@string/sample_text_1"
            android:textAlignment="center"
            android:textSize="32sp"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@+id/textNum2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNum2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="clip_vertical|center_horizontal"
            android:text="@string/sample_text_2"
            android:textAlignment="center"
            android:textSize="32sp"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@+id/textNum3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNum1" />

        <TextView
            android:id="@+id/textNum3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="clip_vertical|center_horizontal"
            android:text="@string/sample_text_3"
            android:textAlignment="center"
            android:textSize="32sp"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@+id/textNum4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNum2" />

        <TextView
            android:id="@+id/textNum4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="clip_vertical|center_horizontal"
            android:text="@string/sample_text_4"
            android:textAlignment="center"
            android:textSize="32sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNum3" />
    </LinearLayout>

    <fragment
        android:id="@+id/fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:name="com.example.framelayout.FavesFragmentBrain"
        android:layout_width="0dp"
        android:layout_height="0dp"
         />
</android.support.constraint.ConstraintLayout>